Add -fsanitize=address flag

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,9 @@ FetchContent_Declare(
 set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
 FetchContent_MakeAvailable(googletest)
 
+add_compile_options(-fsanitize=address)
+add_link_options(-fsanitize=address)
+
 enable_testing()
 
 add_executable(
